Added fancy pillar.

--- a/src/main/resources/assets/backrooms/lang/en_us.json
+++ b/src/main/resources/assets/backrooms/lang/en_us.json
@@ -23,5 +23,6 @@
       "block.backrooms.red_dotted_wallpaper": "Red Dotted Wallpaper",
       "block.backrooms.red_blank_wallpaper": "Red Blank Wallpaper",
       "block.backrooms.office_door": "Office Door",
-      "block.backrooms.portal_spawner": "Portal Spawner"
+      "block.backrooms.portal_spawner": "Portal Spawner",
+      "block.backrooms.fancy_pillar": "Fancy Pillar"
     }
