Added red wallpaper patterns, fixed leftover "arrowed" and "lined" naming.

--- a/src/main/resources/assets/backrooms/lang/en_us.json
+++ b/src/main/resources/assets/backrooms/lang/en_us.json
@@ -7,6 +7,14 @@
       "item.backrooms.dotted_pattern.desc": "Dotted Wallpaper",
       "item.backrooms.blank_pattern": "Banner Pattern",
       "item.backrooms.blank_pattern.desc": "Blank Wallpaper",
+      "item.backrooms.red_patterned_pattern": "Banner Pattern",
+      "item.backrooms.red_patterned_pattern.desc": "Red Patterned Wallpaper",
+      "item.backrooms.red_striped_pattern": "Banner Pattern",
+      "item.backrooms.red_striped_pattern.desc": "Red Striped Wallpaper",
+      "item.backrooms.red_dotted_pattern": "Banner Pattern",
+      "item.backrooms.red_dotted_pattern.desc": "Red Dotted Wallpaper",
+      "item.backrooms.red_blank_pattern": "Banner Pattern",
+      "item.backrooms.red_blank_pattern.desc": "Red Blank Wallpaper",
       "block.backrooms.plasterwall": "Drywall",
       "block.backrooms.cork_tile": "Ceiling Tile",
       "block.backrooms.fluorescent_light": "Fluorescent Light",
